@@ -1,3 +1,10 @@
+2008-10-24  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem.c (seek_slider_pressed_cb), (seek_slider_released_cb):
+	Add hack from Rhythmbox to force the behaviour of the left-click
+	button to skip directly to the position we clicked, as if we were
+	using the middle-button click (Closes: #129671)
+
 2008-10-22  Bastien Nocera  <hadess@hadess.net>
 
 	* data/totem.ui:
